@@ -167,6 +167,11 @@ struct _ioa_engine
 
 #define SOCKET_MAGIC (0xABACADEF)
 
+struct traffic_bytes {
+	band_limit_t jiffie_bytes_read;
+	band_limit_t jiffie_bytes_write;
+};
+
 struct _ioa_socket
 {
 	evutil_socket_t fd;
@@ -204,9 +209,9 @@ struct _ioa_socket
 	int default_tos;
 	int current_tos;
 	stun_buffer_list bufs;
-	turn_time_t jiffie;
-	band_limit_t jiffie_bytes_read;
-	band_limit_t jiffie_bytes_write;
+	turn_time_t jiffie; /* bandwidth check interval */
+	struct traffic_bytes data_traffic;
+	struct traffic_bytes control_traffic;
 	/* RFC 6062 ==>> */
 	//Connection session:
 	tcp_connection *sub_session;
